syntax="proto3";
package commonproto;

// import "google/protobuf/timestamp.proto";

option go_package ="./database/pubsub/auditprotobuf";

message SimpleEvent {
  SimpleEventContent event = 1;
  map<string, string> metadata = 2;
}

message SimpleEventContent {
  string eventName = 1;
  int64 timestamp = 2;
  repeated KeyPair eventParams = 3;
}

message KeyPair {
  string key = 1;
  string value = 2;
}